--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,8 @@ jobs:
     environment:
       DOCKER_VER: 17.03.0-ce
       DOCKER_USER: bloo
-      PROJECT: ${DOCKER_USER}/journalbeat
-      TAG: 0.1.${CIRCLE_BUILD_NUM}
+      PROJECT: bloo/journalbeat
+      TAG_MAJOR: 0.1
     working_directory: /${PROJECT}
     steps:
       - run: apt-get update && apt-get install -y curl git
@@ -25,6 +25,7 @@ jobs:
       - run:
           name: Build and Install
           command: |
+            TAG=${TAG_MAJOR}.${CIRCLE_BUILD_NUM}
             docker build -t ${PROJECT}:${TAG} .
             docker login -u ${DOCKER_USER} -p ${DOCKER_PASS}
             docker push ${PROJECT}:${TAG}
